    - Improved version info dialog.
    - Backed to a flickering method due to wrong control display.
    - Remembered main window focus.
- v.5.7.2 (2022-06-07)
    - Supported TOOLBAR resources.
- v.5.7.3 (2023-04-01)
    - Minor performance improvements.
    - Improved "Copy to multiple languages".
    - Fixed FILESUBTYPE of VERSIONINFO.
    - Made "~" the backup suffix rather than "-old".
    - Renamed "Replacing Dialog Fonts..." as "Dialog font substitutes..."
- v.5.7.4 (2023-04-02)
    - Added version numbers to IDS_NOTICE.
    - Improved EGA console.
    - Fixed half-broken installer.
- v.5.7.5 (2023-05-08)
    - Improved IDD_DLGPROP, IDD_CTRLPROP, IDD_ADDCTRL dialogs.
    - Added Korean installer.
    - Fixed MENUEX separator.
- v.5.7.6 (2023-06-02)
    - Localized the Help menu.
    - Added RES_str_get and RES_str_set functions to EGA.
- v.5.7.7 (2023-06-05)
    - Commonized IDD_ADDDLGINIT and IDD_MODIFYDLGINIT.
    - Changed the design of RES_str_get and RES_str_set.
    - Added RES_get_text and RES_set_text functions to EGA.
- v.5.7.8 (2023-10-06)
    - Improved Portuguese (Brazilian) translation.
    - Relaxed font selection requirements.
    - Added Traditional Chinese translation.
- v.5.7.9 (2023-11-14)
    - Added EGA sample DeleteNonEnglish.ega.
    - Fixed IDS_THEREISUPDATE translation.
- v.5.8.0 (2024-03-03)
    - Coping with security scan when generating EXE files.
- v.5.8.1 (2024-03-04)
    - Improved IDD_ADDCTRL and IDD_CTRLPROP dialogs.
- v.5.8.2 (2024-07-20)
    - Added ES_AUTOHSCROLL style to some text boxes.
    - Fixed loading failure of Win2k3 ieframe.dll BITMAP 214.
    - Centering "Edit Dialog" window.
    - Supported exporting RES file.
- v.5.8.3 (2024-07-24)
    - Auto filling resource name from filename.
    - Added resource language setting.
    - Fixed freeze on Enter key.
    - Supported x64.
- v.5.8.4 (2024-08-02)
    - Separated x86 and x64 settings.
    - Fixed misinterpretation of open filter index.
- v.5.8.5 (2024-XX-YY)