@@ -320,3 +320,4 @@
     - x86 및 x64 설정을 분리합니다.
     - 열린 필터 인덱스의 잘못된 해석을 수정했습니다.
 - v.5.8.5 (2024-XX-YY)
+    - Improved EGA console usability.
